# Qwen-Image-Edit-2511-LoRAs-Fast-Lazy-Load

./: .gitignore  README.md  add app  app.py  pre-requirements.txt  pyproject.toml  requirements.txt  run.bat  run_desktop.bat
scripts/: build_installer.ps1  check_python.ps1  installer.iss
