[project]
name = "qwen-image-edit-2511-loras-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "av>=17.1.0",
    "diffusers",
    "gradio==6.17.3",
    "hf-xet>=1.5.0",
    "huggingface-hub>=0.36.2",
    "kernels>=0.12.3",
    "numpy>=2.4.6",
    "peft",
    "sentencepiece>=0.2.1",
    "spaces>=0.50.4",
    "torch==2.11.0",
    "torchvision>=0.26.0",
    "transformers==4.57.3",
]

[project.optional-dependencies]
desktop = ["pywebview>=5"]

[tool.uv.sources]
accelerate = { git = "https://github.com/huggingface/accelerate.git" }
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
peft = { git = "https://github.com/huggingface/peft.git" }
