[project]
name = "qwen-image-edit-2511-loras-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate==1.14.0",
    "annotated-types==0.7.0",
    "authlib==1.7.2",
    "av==18.0.0",
    "brotli==1.2.0",
    "cffi==2.1.0",
    "cryptography==49.0.0",
    "diffusers==0.39.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.139.1",
    "gradio==6.20.0",
    "gradio-client==2.5.0",
    "groovy==0.1.2",
    "hf-gradio==0.4.1",
    "httpx-sse==0.4.3",
    "id==1.6.1",
    "importlib-metadata==9.0.0",
    "itsdangerous==2.2.0",
    "joserfc==1.7.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kernels==0.16.0",
    "kernels-data==0.16.0",
    "mcp==1.28.1",
    "orjson==3.11.9",
    "peft==0.19.1",
    "pillow==12.3.0",
    "platformdirs==4.10.0",
    "psutil==7.2.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.14.2",
    "pydub==0.25.1",
    "pyjwt==2.13.0",
    "pyopenssl==26.3.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "pytz==2026.2",
    "referencing==0.37.0",
    "regex==2026.7.10",
    "rfc3161-client==1.0.7",
    "rfc8785==0.1.4",
    "rpds-py==2026.6.3",
    "safehttpx==0.1.7",
    "safetensors==0.8.0",
    "securesystemslib==1.4.0",
    "semantic-version==2.10.0",
    "sentencepiece==0.2.2",
    "sigstore==4.4.0",
    "sigstore-models==0.0.6",
    "sigstore-rekor-types==0.0.18",
    "spaces==0.51.0",
    "sse-starlette==3.4.5",
    "starlette==1.3.1",
    "tokenizers==0.22.2",
    "tomlkit==0.14.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "transformers==5.14.1",
    "tuf==7.0.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.51.0",
    "websockets==16.1",
    "zipp==4.1.0",
]
